[package]
name = "pls"
version = "0.1.0"
edition = "2018"
description = "A command line utility that repeatedly runs a command until some criteria are met."
authors = ["Anthony Wharton <a.wharton.2015@bristol.ac.uk>"]
categories = ["command-line-utilities"]
repository = "https://github.com/AnthonyWharton/pls"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "2.32.0"
term = "0.5.1"
